// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchMyFlightDetailsForm renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div>
        MockedFlightForm
      </div>
      <div>
        MockedAirportForm - 
        Origin
      </div>
      <div>
        MockedAirportForm - 
        Destination
      </div>
      <div>
        MockedAircraftForm - 
      </div>
    </div>
  </div>
</body>
`;

exports[`SearchMyFlightDetailsForm when flight details received renders successfully 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div>
        MockedFlightForm
      </div>
      <div>
        MockedAircraftForm - 
        A6-FMB
      </div>
    </div>
  </div>
</body>
`;
